# eigenlayer-ecdsa-template

./: Cargo.toml  README.md  build.rs  foundry.toml  remappings.txt  settings.env
.github/workflows/: verify-template.yml
contracts/src/: HelloServiceManager.sol  TangleServiceManager.sol  TangleTaskManager.sol
contracts/src/test/: TestAVSDirectory.sol  TestDelegationManager.sol  TestHelloServiceManager.sol  TestRemoteChallenger.sol  TestTangleServiceManager.sol
contracts/test/: EigenlayerBase.sol  HelloServiceManager.t.sol  TangleServiceManager.t.sol
src/: config.rs  lib.rs  main.rs
