[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
description = "{{project-description}}"
authors = ["{{authors}}"]
license = "MIT OR Apache-2.0"
homepage = "{{project-homepage}}"
repository = "https://github.com/{{gh-username}}/{{project-name}}"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]
rust-version = "1.81"

[dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/gadget", default-features = false, features = ["eigenlayer", "evm", "macros", "build"] }
serde = { version = "1.0.188", features = ["derive"] }
async-trait = { version = "0.1.85" }

[build-dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/gadget", default-features = false, features = ["build"] }

[features]
default = ["std"]
std = ["blueprint-sdk/std"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "{{project-name}}"
path = "src/main.rs"

[package.metadata.blueprint]
manager = { Evm = "TangleServiceManager" }

[[package.metadata.gadget.Native.sources]]
owner = "{{gh-username}}"
repo = "{{project-name}}"
tag = "0.1.0"
binaries = [
    { arch = "Amd64", os = "Linux", name = "amd64-linux-{{project-name}}-gadget" },
    { arch = "Arm64", os = "Linux", name = "arm64-linux-{{project-name}}-gadget" },
]
